--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
-	"name": "blog-code",
-	"version": "0.0.1",
+	"name": "SvelteKit JWT Auth",
+	"version": "0.1.",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"db:push": "drizzle-kit push",
+		"db:migrate": "drizzle-kit migrate",
+		"db:studio": "drizzle-kit studio",
+		"format": "prettier --write .",
+		"lint": "prettier --check ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"prisma": "^4.11.0",
-		"svelte": "^3.54.0",
-		"vite": "^4.0.0"
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/kit": "^2.15.0",
+		"drizzle-kit": "^0.22.0",
+		"prettier": "^3.3.2",
+		"prettier-plugin-svelte": "^3.2.6",
+		"svelte": "^5.16.0",
+		"svelte-check": "^4.1.1",
+		"vite": "^6.0.6"
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^4.11.0",
+		"@libsql/client": "^0.9.0",
 		"bcryptjs": "^2.4.3",
-		"jsonwebtoken": "^9.0.0"
+		"drizzle-orm": "^0.33.0",
+		"jsonwebtoken": "^9.0.2"
 	}
 }
