--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/kit": "^2.15.0",
-		"drizzle-kit": "^0.22.0",
-		"prettier": "^3.3.2",
-		"prettier-plugin-svelte": "^3.2.6",
+		"drizzle-kit": "^0.22.8",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.2",
 		"svelte": "^5.16.0",
 		"svelte-check": "^4.1.1",
 		"vite": "^6.0.6"
@@ -25,6 +25,7 @@
 	"type": "module",
 	"dependencies": {
 		"@libsql/client": "^0.9.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"bcryptjs": "^2.4.3",
 		"drizzle-orm": "^0.33.0",
 		"jsonwebtoken": "^9.0.2"
