--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/kit": "^2.15.0",
-		"drizzle-kit": "^0.22.8",
+		"@types/bcryptjs": "^2.4.6",
+		"@types/jsonwebtoken": "^9.0.7",
+		"drizzle-kit": "^0.30.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.2",
 		"svelte": "^5.16.0",
@@ -24,10 +26,10 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@libsql/client": "^0.9.0",
+		"@libsql/client": "^0.14.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"bcryptjs": "^2.4.3",
-		"drizzle-orm": "^0.33.0",
+		"drizzle-orm": "^0.38.3",
 		"jsonwebtoken": "^9.0.2"
 	}
 }
